# çŒ¿ï¼ˆStaff Hubï¼‰
extends Node


# ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼
# ãƒãƒ¼ãƒ‰ãƒ»ãƒ‘ã‚¹é–¢é€£
# ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼


# ç›£ç£å–å¾—
func owner_node():
	return self.get_node("../../ğŸ‘¥Staff")


# æ§‹æˆå–å¾—
func config_node():
	return self.owner_node().get_node("âš™Config")


# ã‚°ãƒªãƒƒãƒ‰å–å¾—
func grid_node():
	return self.owner_node().get_node("Grid")


# ã‚¤ãƒ©ã‚¹ãƒˆãƒ¬ãƒ¼ã‚¿ãƒ¼å–å¾—
func illustrator_node():
	return self.owner_node().get_node("ğŸ‘¤Illustrator")


# ãƒ¢ãƒ³ã‚¹ã‚¿ãƒ¼ã®å…¨èº«åƒ
func monster_whole_body():
	return self.owner_node().get_node("MonsterTrainer/WholeBody")


# ãƒ¢ãƒ³ã‚¹ã‚¿ãƒ¼ãƒ»ãƒ•ã‚§ãƒ¼ã‚¹ã‚º
func monster_faces():
	return self.owner_node().get_node("MonsterTrainer/Faces")


# BGMå–å¾—
func musician_bg_musics_node():
	return self.owner_node().get_node("ğŸ‘¤Musician/ğŸŒBgMusics")


# SEå–å¾—
func musician_sound_fx_node():
	return self.owner_node().get_node("ğŸ‘¤Musician/ğŸŒSoundFX")


# ãƒ—ãƒ­ã‚°ãƒ©ãƒãƒ¼ãƒ»ãƒãƒ–å–å¾—
func programmer():
	return self.owner_node().get_node("ğŸ‘¤Programmer/ğŸµMonkey")


# ã‚·ãƒŠãƒªã‚ªãƒ©ã‚¤ã‚¿ãƒ¼ãƒ»ãƒãƒ–å–å¾—
func scenario_writer():
	return self.owner_node().get_node("ğŸ‘¤ScenarioWriter/ğŸµMonkey_ğŸ‰VisualNovel")


# ãƒ†ãƒ­ãƒƒãƒ—ãƒ»ã‚³ãƒ¼ãƒ‡ã‚£ãƒãƒ¼ã‚¿ãƒ¼å–å¾—
func telop_coordinator_node():
	return self.owner_node().get_node("ğŸ‘¤TelopCoordinator")
